--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --timeout=10000",
+    "test": "mocha --compilers js:babel-register --timeout=100000",
     "start": "node index"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "aws-sign2": "^0.6.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-register": "^6.5.1",
     "bl": "^1.1.2",
